force-app/main/default/objects/Branding_Audit_Line__c/Branding_Audit_Line__c.object-meta.xml
<CustomObject>
    <label>Branding Audit Line</label>
    <nameField>
        <displayFormat>BAL-{00000}</displayFormat>
        <label>Branding Audit Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branding Audit Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>