force-app/main/default/objects/Branding_Audit_Line__c/fields/Branding_Asset__c.field-meta.xml
<CustomField>
    <fullName>Branding_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branding Asset</label>
    <referenceTo>Branding_Asset__c</referenceTo>
    <relationshipLabel>Branding Audit Lines</relationshipLabel>
    <relationshipName>Branding_Audit_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>