force-app/main/default/objects/Branding_Audit_Line__c/fields/Branding_Audit__c.field-meta.xml
<CustomField>
    <fullName>Branding_Audit__c</fullName>
    <label>Branding Audit</label>
    <referenceTo>Branding_Audit__c</referenceTo>
    <relationshipLabel>Branding Audit Lines</relationshipLabel>
    <relationshipName>Branding_Audit_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>