force-app/main/default/objects/Branding_Audit_Line__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>Damage</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>