force-app/main/default/objects/Branding_Audit_Line__c/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signage</fullName>
            </value>
            <value>
                <fullName>Flange</fullName>
            </value>
            <value>
                <fullName>Standee</fullName>
            </value>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>Paintng</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>