force-app/main/default/objects/Branding_Audit_Line__c/fields/Photo_Link__c.field-meta.xml
<CustomField>
    <fullName>Photo_Link__c</fullName>
    <label>Photo Link</label>
    <type>Url</type>
</CustomField>