force-app/main/default/objects/Branding_Audit_Line__c/fields/Sub_Media__c.field-meta.xml
<CustomField>
    <fullName>Sub_Media__c</fullName>
    <label>Sub Media</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Back lit D/S Signage – Vertical</fullName>
            </value>
            <value>
                <fullName>L Shaped back lit Signage</fullName>
            </value>
            <value>
                <fullName>L Shaped non lit Signage</fullName>
            </value>
            <value>
                <fullName>ACP/LE Signage</fullName>
            </value>
            <value>
                <fullName>Back lit Signage</fullName>
            </value>
            <value>
                <fullName>Non lit Signage</fullName>
            </value>
            <value>
                <fullName>Back lit Flange</fullName>
            </value>
            <value>
                <fullName>Non lit Flange</fullName>
            </value>
            <value>
                <fullName>Non lit Standee</fullName>
            </value>
            <value>
                <fullName>Lit Standee</fullName>
            </value>
            <value>
                <fullName>In Shop Branding</fullName>
            </value>
            <value>
                <fullName>Shop Paintng</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>